Features übersichtlicher mit Beispielen

--- a/book/features.ipynb
+++ b/book/features.ipynb
@@ -6,57 +6,82 @@
    "source": [
     "# Testseite für neue Features\n",
     "\n",
-    "Diese Seite dient als Ort für das Testen neuer Features und sollte nicht in der Live-Version der Seite auftauchen.\n",
+    "Diese Seite dient als Ort für das Testen neuer Features und sollte gf. nicht in der Live-Version der Seite auftauchen.\n",
     "\n",
-    "## Tooltips\n",
-    "```{warning}\n",
-    ":name: hinweis-tooltips\n",
-    "1. Die Tooltips funktionieren manchmal beim Entwickeln mit `make develop` nicht für Links auf andere Seiten im Buch. Hier muss ein `make clean` erfolgen, damit die Links wieder funktionieren. Hat aber keine Auswirkung auf die Live-Version, da diese ja nur einmal gebaut wird und dann nicht mehr verändert wird.  \n",
-    "Daher besser für das Testen der Tooltips die Seite mit `make build` neu bauen und manuell öffnen ohne Live-Server.  \n",
-    "2. Die Referenzen der Tooltips können unterschiedlich angebeben werden. Es ist jedoch ratsam, immer den gewünschten Text und den Namen der Referenz anzugeben. Also statt ``{term}`Aktivierungsfunktion` `` lieber ``{term}`Aktivierungsfunktion <Aktivierungsfunktion>` ``. So ist man auf der sicheren Seite, wenn sie der Name eines Dokuments oder einer Referenz ändern sollte.\n",
-    "\n",
+    "```{contents} Inhalte\n",
+    ":depth: 1\n",
     "```\n",
     "\n",
-    "```{seealso}\n",
+    "## Tooltips\n",
+    "\n",
+    "```{admonition} Referenzen\n",
+    ":class: seealso\n",
     "- [sphinx-tippy Beispiel](https://sphinx-tippy.readthedocs.io/en/latest/) (https://github.com/sphinx-extensions2/sphinx-tippy)\n",
     "- [teachbooks-sphinx-tippy Beispiel](https://teachbooks.io/TeachBooks-sphinx-tippy-Example/main/) (https://github.com/TeachBooks/teachbooks-sphinx-tippy)\n",
     "```\n",
     "\n",
-    "**Beispiele:**  \n",
-    "\n",
-    "- Link zu ipynb-Seite: [](live_code)\n",
-    "- Link zu ipynb-Seite mit eigenem Text: [Live code](live_code)\n",
-    "- Link zu ipynb-Seite in Unterordner: [](ki/knearestneighbor)\n",
-    "- Link zu ipynb-Seite in Unterordner mit eigenem Text: [k-Nächste-Nachbarn-Algorithmus](ki/knearestneighbor)\n",
-    "- Link zu ipynb-Seite mit {doc}: {doc}`live_code`\n",
-    "- Link zu ipynb-Seite mit {doc} und eigenem Text: {doc}`Live code <live_code>`\n",
-    "- Link zu ipynb-Seite mit {doc} in Unterordner: {doc}`ki/knearestneighbor`\n",
-    "- Link zu ipynb-Seite mit {doc} in Unterordner und eigenem Text: {doc}`k-Nächste-Nachbarn-Algorithmus <ki/knearestneighbor>`\n",
-    "- Link zu Glossar: {term}`Aktivierungsfunktion`\n",
-    "- Link zu Glossar mit eigenem Text: {term}`siehe Backpropagation <Backpropagation>`\n",
-    "- Link zu Admonition: {ref}`hinweis-tooltips` (schneit nicht zu funktionieren)\n",
-    "- Link zu Admonition mit eigenem Text: {ref}`Hinweis zu Tooltips <hinweis-tooltips>`\n",
-    "- Link zu Beispiel-Abschnitt mit ``{ref}``: {ref}`Beispiel-Abschnitt <beispiel-abschnitt>`\n",
-    "- Link zu Beispiel-Abschnitt mit ``[]()`` (ohne #): [Beispiel-Abschnitt](beispiel-abschnitt)\n",
-    "- Link zu englischen Wikipedia: [Tooltip](https://en.wikipedia.org/wiki/Tooltip) \\[deutsches Wiki leider nicht unterstützt\\]\n",
-    "\n",
-    "## Block attributes\n",
-    "\n",
-    "```{seealso}\n",
-    "https://myst-parser.readthedocs.io/en/latest/syntax/optional.html#block-attributes\n",
+    "```{warning}\n",
+    ":name: hinweis-tooltips\n",
+    "Beim Entwickeln funktionieren die Tooltips mit `make develop` manchmal nicht, meist nur nach Neustart des Befehls. Um sicherzugehen, dass die Tooltips funktionieren, sollte das Teachbook mit `make build` neu gebaut werden. Dann die Seite manuell öffnen ohne Live-Server.  \n",
     "```\n",
     "\n",
-    "{#mypara .bg-warning}\n",
-    "Das ist ein ganzer Paragraf als Warnung hinterlegt.\n",
+    "```{hint}\n",
+    "Die Links können wie bisher mit ``[Name](Linkziel)`` angegeben werden. Sonderfall sind Glossareinträge, diese müssen mit ``{term}`Name <Glossar-Eintrag>` `` angegeben werden. Bei internen Seiten darf nicht die Endung `.ipynb` angegeben werden, sondern nur den Dateinamen. Außerdem ist es wichtig, bei Referenzen zu anderen Stellen/Bildern/Tabellen das Ziel ohne ``#`` anzugeben.\n",
+    "```\n",
     "\n",
-    "Referenz zum vorigen {ref}`Paragraphen <mypara>` mit Tooltip.\n",
+    "**Beispiele:**  \n",
+    "\n",
+    "| Interne Seite ohne/mit Text ||\n",
+    "| --- | --- |\n",
+    "| ``[](live_code)`` | [](live_code)\n",
+    "| ``[Zur Live-Code Seite](live_code)`` | [Zur Live-Code Seite](live_code)\n",
+    "\n",
+    "| Interne Unterseite ohne/mit Text ||\n",
+    "| --- | --- |\n",
+    "| ``[](ki/knearestneighbor)`` | [](ki/knearestneighbor)\n",
+    "| ``[Zum kNN-Algorithmus](ki/knearestneighbor)`` | [Zum kNN-Algorithmus](ki/knearestneighbor)\n",
+    "\n",
+    "| Glossar-Eintrag ohne/mit Text ||\n",
+    "| --- | --- |\n",
+    "``{term}`Euklidische Distanz` `` | {term}`Euklidische Distanz`\n",
+    "``{term}`siehe Euklidische Distanz <Euklidische Distanz>` `` | {term}`siehe Euklidische Distanz <Euklidische Distanz>`\n",
+    "\n",
+    "| Admonition mit ``:name: admonitionname`` (Text erforderlich) ||\n",
+    "| --- | --- |\n",
+    "| ``[Hinweise zu den Tooltips](hinweis-tooltips)`` | [Hinweise zu den Tooltips](hinweis-tooltips)\n",
+    "\n",
+    "| Abschnitte mit ``(abschnittname)=`` (Text erforderlich) ||\n",
+    "| --- | --- |\n",
+    "``[Beispiel-Abschnitt](beispiel-abschnitt)`` | [Hier zum Beispiel-Abschnitt](beispiel-abschnitt)\n",
+    "\n",
+    "| Englisches Wikipedia ||\n",
+    "| --- | --- |\n",
+    "``[Tooltip](https://en.wikipedia.org/wiki/Tooltip)`` | [Tooltip](https://en.wikipedia.org/wiki/Tooltip)\n",
+    "\n",
+    "Alternativ können bei Dokumenten und Referenzen auch die Rollen ``{doc}`Name <Linkziel>` `` und ``{ref}`Name <Linkziel>` ``verwendet werden. Aber die Schreibweise mit ``[]()`` ist einfacher und sollte bevorzugt werden.  \n",
+    "Z.B: ``{doc}`live_code` `` bzw. ``{doc}`Zur Live-Code Seite <live_code>` ``\n",
+    "\n",
+    "Bei Glossar-Einträgen funktioniert nur die Rolle ``{term}`Name <Glossar-Eintrag>` ``. Nachteil ist hier, dass das Linkziel immer genau dem Namen des Glossar-Eintrags entsprechen muss. Bisher keine Möglichkeit gefunden, das zu umgehen.\n",
     "\n",
     "## Definition lists and glossaries\n",
-    "```{seealso}\n",
+    "\n",
+    "```{admonition} Referenzen\n",
+    ":class: seealso\n",
     "https://myst-parser.readthedocs.io/en/latest/syntax/typography.html#syntax-glossaries\n",
     "```\n",
     "\n",
     "Automatisches Formatieren für Glossar-Einträge:\n",
+    "\n",
+    "```\n",
+    "{.glossary}\n",
+    "Term 1\n",
+    ": Definition\n",
+    "\n",
+    "Term 2\n",
+    ": Longer definition\n",
+    "\n",
+    "  With multiple paragraphs\n",
+    "```\n",
     "\n",
     "{.glossary}\n",
     "Term 1\n",
@@ -70,6 +95,23 @@
     "Referenz zu den vorigen Definitionen {term}`Term 1` und {term}`Term 2` mit Tooltip.\n",
     "\n",
     "\n",
+    "## Block attributes\n",
+    "\n",
+    "```{admonition} Referenzen\n",
+    ":class: seealso\n",
+    "https://myst-parser.readthedocs.io/en/latest/syntax/optional.html#block-attributes  \n",
+    "https://myst-parser.readthedocs.io/en/latest/syntax/cross-referencing.html#creating-explicit-targets\n",
+    "```\n",
+    "\n",
+    "Es ist möglich, ganze Abschnitte mit Attributen zu versehen.\n",
+    "``{#mypara .bg-warning}``\n",
+    "\n",
+    "{#mypara .bg-warning}\n",
+    "Das ist ein ganzer Paragraf als Warnung hinterlegt.\n",
+    "\n",
+    "Referenz zum vorigen [Paragraphen mit ID mypara](mypara)` ohne '#'!.  \n",
+    "Code: ``[Paragraphen mit ID mypara](mypara)``\n",
+    "\n",
     "## Inline attributes\n",
     "\n",
     "```{seealso}\n",
@@ -77,15 +119,11 @@
     "```\n",
     "Hier kommt ein [Text mit Warnung]{.bg-warning} in einem Textabschnitt  \n",
     "\n",
+    "* * *\n",
+    "\n",
     "(beispiel-abschnitt)=\n",
-    "## Beispiel-Abschnitt zum verlinken\n",
-    "Diesen Abschnitt kann man auch verlinken, indem mal einen Verweisschlüssel vorher\n",
-    "setzt mit ``(...)=``.\n",
-    "Achtung: damit die Verlinkung als Link mit 🔗 erscheint, muss der Link  \n",
-    "als Rolle mit ``{ref}... <...>`` oder als Cross Referenz mit ``[...](...)`` aber ohne # gesetzt werden.\n",
-    "Z.B:\n",
-    "- ``{ref}`Beispiel-Abschnitt <beispiel-abschnitt>` `` \n",
-    "- ``[Beispiel-Abschnitt](beispiel-abschnitt)``"
+    "**Beispiel-Abschnitt zum verlinken**  \n",
+    "Diesen Abschnitt kann man verlinken, indem mal einen Verweisschlüssel vorher setzt mit ``(name)=``."
    ]
   }
  ],
