--- a/book/features.ipynb
+++ b/book/features.ipynb
@@ -9,7 +9,7 @@
     "Diese Seite dient als Ort für das Testen neuer Features und sollte gf. nicht in der Live-Version der Seite auftauchen.\n",
     "\n",
     "```{contents} Inhalte\n",
-    ":depth: 1\n",
+    ":depth: 2\n",
     "```\n",
     "\n",
     "## Tooltips\n",
@@ -52,11 +52,11 @@
     "\n",
     "| Abschnitte mit ``(abschnittname)=`` (Text erforderlich) ||\n",
     "| --- | --- |\n",
-    "``[Beispiel-Abschnitt](beispiel-abschnitt)`` | [Hier zum Beispiel-Abschnitt](beispiel-abschnitt)\n",
+    "| ``[Beispiel-Abschnitt](beispiel-abschnitt)`` | [Hier zum Beispiel-Abschnitt](beispiel-abschnitt)\n",
     "\n",
     "| Englisches Wikipedia ||\n",
     "| --- | --- |\n",
-    "``[Tooltip](https://en.wikipedia.org/wiki/Tooltip)`` | [Tooltip](https://en.wikipedia.org/wiki/Tooltip)\n",
+    "| ``[Tooltip](https://en.wikipedia.org/wiki/Tooltip)`` | [Tooltip](https://en.wikipedia.org/wiki/Tooltip)\n",
     "\n",
     "Alternativ können bei Dokumenten und Referenzen auch die Rollen ``{doc}`Name <Linkziel>` `` und ``{ref}`Name <Linkziel>` ``verwendet werden. Aber die Schreibweise mit ``[]()`` ist einfacher und sollte bevorzugt werden.  \n",
     "Z.B: ``{doc}`live_code` `` bzw. ``{doc}`Zur Live-Code Seite <live_code>` ``\n",
@@ -119,7 +119,23 @@
     "```\n",
     "Hier kommt ein [Text mit Warnung]{.bg-warning} in einem Textabschnitt  \n",
     "\n",
-    "* * *\n",
+    "## Einbinden von Font Awesome Icons\n",
+    "\n",
+    "```{admonition} Referenzen\n",
+    ":class: seealso\n",
+    "https://marketplace.visualstudio.com/items?itemName=tomasvergara.vscode-fontawesome-gallery für Suchen von Icons in VS Code  \n",
+    "https://fontawesome.com/v5/search?o=r&m=free für die Suche nach Icons auf der Font Awesome Seite\n",
+    "```\n",
+    "\n",
+    "Es ist möglich, Font Awesome Icons einzubinden. Es wird die Klasse `fas` bzw. `fa-solid` und der Name des Icons benötigt. Die Icons können auch in Buttons oder Links eingebunden werden (bzw. sind sie ja schon im Template in der Headerbar). Die verwendeten Icons sind aus der Free-Version von Font Awesome (solid Icons).\n",
+    "\n",
+    "| Icon | Code |\n",
+    "| ---- | ---- |\n",
+    "| <span class=\"fas fa-download\"></span>  | ``<span class=\"fas fa-download\"></span>`` |\n",
+    "| <span class=\"fas fa-rocket\"></span> | ``<span class=\"fas fa-rocket\"></span>`` |\n",
+    "| <span class=\"fas fa-graduation-cap\"></span> | ``<span class=\"fas fa-graduation-cap\"></span>`` |\n",
+    "\n",
+    "<br><hr /><br>\n",
     "\n",
     "(beispiel-abschnitt)=\n",
     "**Beispiel-Abschnitt zum verlinken**  \n",
