--- a/book/features.ipynb
+++ b/book/features.ipynb
@@ -10,8 +10,13 @@
     "\n",
     "```{contents} Inhalte\n",
     ":depth: 2\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Tooltips\n",
     "\n",
     "```{admonition} Referenzen\n",
@@ -61,9 +66,14 @@
     "Alternativ können bei Dokumenten und Referenzen auch die Rollen ``{doc}`Name <Linkziel>` `` und ``{ref}`Name <Linkziel>` ``verwendet werden. Aber die Schreibweise mit ``[]()`` ist einfacher und sollte bevorzugt werden.  \n",
     "Z.B: ``{doc}`live_code` `` bzw. ``{doc}`Zur Live-Code Seite <live_code>` ``\n",
     "\n",
-    "Bei Glossar-Einträgen funktioniert nur die Rolle ``{term}`Name <Glossar-Eintrag>` ``. Nachteil ist hier, dass das Linkziel immer genau dem Namen des Glossar-Eintrags entsprechen muss. Bisher keine Möglichkeit gefunden, das zu umgehen.\n",
-    "\n",
-    "## Definition lists and glossaries\n",
+    "Bei Glossar-Einträgen funktioniert nur die Rolle ``{term}`Name <Glossar-Eintrag>` ``. Nachteil ist hier, dass das Linkziel immer genau dem Namen des Glossar-Eintrags entsprechen muss. Bisher keine Möglichkeit gefunden, das zu umgehen.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definition und Glossar\n",
     "\n",
     "```{admonition} Referenzen\n",
     ":class: seealso\n",
@@ -92,9 +102,13 @@
     "\n",
     "  With multiple paragraphs\n",
     "\n",
-    "Referenz zu den vorigen Definitionen {term}`Term 1` und {term}`Term 2` mit Tooltip.\n",
-    "\n",
-    "\n",
+    "Referenz zu den vorigen Definitionen {term}`Term 1` und {term}`Term 2` mit Tooltip."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Block attributes\n",
     "\n",
     "```{admonition} Referenzen\n",
@@ -110,15 +124,25 @@
     "Das ist ein ganzer Paragraf als Warnung hinterlegt.\n",
     "\n",
     "Referenz zum vorigen [Paragraphen mit ID mypara](mypara)` ohne '#'!.  \n",
-    "Code: ``[Paragraphen mit ID mypara](mypara)``\n",
-    "\n",
+    "Code: ``[Paragraphen mit ID mypara](mypara)``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inline attributes\n",
     "\n",
     "```{seealso}\n",
     "https://myst-parser.readthedocs.io/en/latest/syntax/optional.html#inline-attributes\n",
     "```\n",
-    "Hier kommt ein [Text mit Warnung]{.bg-warning} in einem Textabschnitt  \n",
-    "\n",
+    "Hier kommt ein [Text mit Warnung]{.bg-warning} in einem Textabschnitt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Einbinden von Font Awesome Icons\n",
     "\n",
     "```{admonition} Referenzen\n",
@@ -133,8 +157,13 @@
     "| ---- | ---- |\n",
     "| <span class=\"fas fa-download\"></span>  | ``<span class=\"fas fa-download\"></span>`` |\n",
     "| <span class=\"fas fa-rocket\"></span> | ``<span class=\"fas fa-rocket\"></span>`` |\n",
-    "| <span class=\"fas fa-graduation-cap\"></span> | ``<span class=\"fas fa-graduation-cap\"></span>`` |\n",
-    "\n",
+    "| <span class=\"fas fa-graduation-cap\"></span> | ``<span class=\"fas fa-graduation-cap\"></span>`` |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br><hr /><br>\n",
     "\n",
     "(beispiel-abschnitt)=\n",
