Link Vereinfachungen von {ref} nach []()

--- a/book/ki/kmeansclustering2_loesung.ipynb
+++ b/book/ki/kmeansclustering2_loesung.ipynb
@@ -9,7 +9,7 @@
     "Wir werden uns nun Schritt für Schritt die nötigen Methoden den k-Means-Clustering Algorithmus erarbeiten. Um am Ende nicht einen großen Codeblock erstellen zu müssen, werden wir soviel Vorarbeit wie möglich erledigen. So kannst du dich am Ende ganz auf die Implementierung der Teile des Algorithmus konzentrieren [Stichwort: externe kognitive Belastung gering halten, siehe [Cognitive Load Theory (CLT)](https://de.wikipedia.org/wiki/Cognitive_Load_Theory) 😉]\n",
     "\n",
     "## Pseudocode\n",
-    "Nochmals die Grundidee des {ref}`Algorithmus <ablauf-k-means-algorithmus>`:\n",
+    "Nochmals die Grundidee des [Algorithmus](ablauf-k-means-algorithmus):\n",
     "\n",
     "1. **Clusterzentren initialisieren:** Zu Beginn werden $k$ Zentroiden (Mittelwerte der Cluster) zufällig oder nach einer bestimmten Heuristik gewählt.\n",
     "2. **Datenpunkte zuweisen:** Jeder Datenpunkt wird dem nächstgelegenen Clusterzentrum zugeordnet. Diese Zuordnung basiert üblicherweise auf der euklidischen Distanz.\n",
@@ -59,13 +59,13 @@
     "Danach müssen die Koordinaten der Zentroiden neu berechnet werden. Zunächst für einen (**A4**), dann für alle Zentroiden (**A5**).\n",
     "\n",
     "**Deine Aufgaben sind:**  \n",
-    "- {ref}`A1 <loesung1>`: `berechne_euklidische_distanz()`\n",
-    "- {ref}`A2 <loesung2>`: `finde_naechsten_zentroiden()`\n",
-    "- {ref}`A3 <loesung3>`: `datenpunkte_zuweisen()`\n",
-    "- {ref}`A4 <loesung4>`: `berechne_zentroid_koordinaten()`\n",
-    "- {ref}`A5 <loesung5>`: `aktualisiere_zentroiden()`\n",
+    "- [A1](loesung1): `berechne_euklidische_distanz()`\n",
+    "- [A2](loesung2): `finde_naechsten_zentroiden()`\n",
+    "- [A3](loesung3): `datenpunkte_zuweisen()`\n",
+    "- [A4](loesung4): `berechne_zentroid_koordinaten()`\n",
+    "- [A5](loesung5): `aktualisiere_zentroiden()`\n",
     "\n",
-    "Wenn alle Aufgaben erledigt, sollte {ref}`die Methode <k-means-final>` `k_means()` korrekt funktionieren 😎."
+    "Wenn alle Aufgaben erledigt, sollte [die Methode `k_means()`](k-means-final) korrekt funktionieren 😎."
    ]
   },
   {
