Tooltips: CSS, nutzung.md

--- a/book/ki/ki_allgemein.ipynb
+++ b/book/ki/ki_allgemein.ipynb
@@ -18,6 +18,7 @@
     "* Der Minimax-Algorithmus für Zwei-Personen-Spiele\n",
     "* Neuronale Netze\n",
     "\n",
+    "(sec:glossar_ki)=\n",
     "## Wichtige Begriffe\n",
     "\n",
     "Die KI ist voller Fachbegriffe. Hier kannst du nachschlagen, wenn du auf einen Begriff stößt, den du nicht kennst.\n",
