--- a/book/ki/knearestneighbor.ipynb
+++ b/book/ki/knearestneighbor.ipynb
@@ -18,11 +18,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(sec:knn_p5js)=\n",
     "## Einführung: Tiere klassifizieren\n",
     "``````{margin}\n",
-    "Dieses Beispiel stammt aus dem tollen Buch [*Künstliche Intelligenz verstehen. Eine spielerische Einführung*](https://www.maschinennah.de/ki-buch/). Das Buch nutzt als Programmiersprache nicht wie wir Python, sondern JavaScript und insb. die Bibliothek [p5js](https://p5js.org/). Viele Animation hier im Skript basieren auf Code aus diesem Buch, wurden von mir aber meistens noch erweitert und angepasst.\n",
+    "Dieses Beispiel stammt aus dem tollen Buch [*Künstliche Intelligenz verstehen. Eine spielerische Einführung*](https://www.maschinennah.de/ki-buch/). Das Buch nutzt als Programmiersprache nicht wie wir Python, sondern **JavaScript** und insb. die Bibliothek [p5js](https://p5js.org/). Die Animation hier basiert auf Code aus diesem Buch, wurde aber noch angepasst≈ und angepasst.\n",
     "``````\n",
-    "**Interaktives Ausprobieren des k-NN-Verfahrens:** Bewege deinen Mauszeiger über die Darstellung unten. Jede Position entspricht einem Tier mit einer gewissen Niedlichkeit und Flauschigkeit. Klicke an eine Positionm um zu sehen, in welche Kategorie der kNN-Algorithmus dieses Tier einordnen würde. Klicke erneut, um eine neue Position zu suchen.\n",
+    "\n",
+    "**Interaktives Ausprobieren des k-NN-Verfahrens:** Bewege deinen Mauszeiger über die Darstellung unten. Jede Position entspricht einem Tier mit einer gewissen Niedlichkeit und Flauschigkeit. Klicke an eine Position um zu sehen, in welche Kategorie der kNN-Algorithmus dieses Tier einordnen würde. Klicke erneut, um eine neue Position zu suchen.\n",
+    "\n",
+    "<iframe src=\"sketches/tierErkennen/index.html\"\n",
+    "        style=\"width: 500px; height: 600px;\"  frameborder=\"0\" ></iframe>\n",
+    "\n",
+    "<!-- <iframe src=\"sketches/tierErkennen/index.html\"\n",
+    "        style=\"width: 600px; height: 500px; overflow: hidden;\"  scrolling=\"no\" frameborder=\"0\" ></iframe> -->\n",
     "\n",
     "**Aufgabe 1:**\n",
     "1. Finde durch Ausprobieren heraus, wie die folgenden Tiere klassifiziert werden:\n",
@@ -42,20 +50,6 @@
     "   Welchen der möglichen Werte für $k$ würdest du wählen, um eine möglichst gute Klassifikation zu erhalten?  \n",
     "\n",
     "7. Schreibe in 1-2 Sätzen auf, wie der k-Nächste-Nachbarn-Algorithmus deiner Meinung nach arbeitet. Vergleiche deine Definition mit der deiner Sitznachbarin."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "``````{margin}\n",
-    "Hier findest du [die ursprüngliche Version](https://editor.p5js.org/MaschinenNah/full/dFTOMwQdL) diese p5js-Sketches aus dem Buch [*Künstliche Intelligenz verstehen*](https://www.maschinennah.de/ki-buch/).\n",
-    "``````\n",
-    "<iframe src=\"sketches/tierErkennen/index.html\"\n",
-    "        style=\"width: 500px; height: 600px;\"  frameborder=\"0\" ></iframe>\n",
-    "\n",
-    "<!-- <iframe src=\"sketches/tierErkennen/index.html\"\n",
-    "        style=\"width: 600px; height: 500px; overflow: hidden;\"  scrolling=\"no\" frameborder=\"0\" ></iframe> -->"
    ]
   },
   {
