--- a/book/ki/knearestneighbor.ipynb
+++ b/book/ki/knearestneighbor.ipynb
@@ -21,7 +21,7 @@
     "(sec:knn_p5js)=\n",
     "## Einführung: Tiere klassifizieren\n",
     "``````{margin}\n",
-    "Dieses Beispiel stammt aus dem tollen Buch [*Künstliche Intelligenz verstehen. Eine spielerische Einführung*](https://www.maschinennah.de/ki-buch/). Das Buch nutzt als Programmiersprache nicht wie wir Python, sondern **JavaScript** und insb. die Bibliothek [p5js](https://p5js.org/). Die Animation hier basiert auf Code aus diesem Buch, wurde aber noch angepasst≈ und angepasst.\n",
+    "Dieses Beispiel stammt aus dem tollen Buch [*Künstliche Intelligenz verstehen. Eine spielerische Einführung*](https://www.maschinennah.de/ki-buch/). Das Buch nutzt als Programmiersprache nicht wie wir Python, sondern **JavaScript** und insb. die Bibliothek [p5js](https://p5js.org/). Die Animation hier basiert auf Code aus diesem Buch, wurde aber noch angepasst und erweitert.\n",
     "``````\n",
     "\n",
     "**Interaktives Ausprobieren des k-NN-Verfahrens:** Bewege deinen Mauszeiger über die Darstellung unten. Jede Position entspricht einem Tier mit einer gewissen Niedlichkeit und Flauschigkeit. Klicke an eine Position um zu sehen, in welche Kategorie der kNN-Algorithmus dieses Tier einordnen würde. Klicke erneut, um eine neue Position zu suchen.\n",
