Download-Link mit []()

--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -323,8 +323,7 @@
    "source": [
     "## Ein Beispiel zum Nachrechnen\n",
     "\n",
-    "Du weißt nun, wie der Algorithmus funktioniert und zu welchen Ergebnissen er führen kann. Am besten kannst du das nachvollziehen, indem du den Algorithmus selbst mal durchführst. Lade dir dieses\n",
-    "{download}`Aufgabenblatt <kmeansclustering_aufgabenblatt.pdf>` herunter und bearbeite es. Die Anweisungen findest du dem Arbeitsblatt. Viel Erfolg 💪"
+    "Du weißt nun, wie der Algorithmus funktioniert und zu welchen Ergebnissen er führen kann. Am besten kannst du das nachvollziehen, indem du den Algorithmus selbst mal durchführst. Lade dir dieses [Aufgabenblatt](kmeansclustering_aufgabenblatt.pdf) herunter und bearbeite es. Die Anweisungen findest du dem Arbeitsblatt. Viel Erfolg 💪"
    ]
   },
   {
@@ -378,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
